--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "apps/*"
   ],
   "devDependencies": {
-    "eslint": "^9.2.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1"
