--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -44,7 +44,8 @@
     "typescript": "^5.4.5",
     "webp-converter": "^2.3.3",
     "@ygo/schemas": "file:../../libs/schemas",
-    "@ygo/mongo-server": "file:../../libs/mongo-server"
+    "@ygo/mongo-server": "file:../../libs/mongo-server",
+    "@ygo/mailer": "file:../../libs/mailer"
   },
   "engines": {
     "node": ">=14.0.0"
