--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "clean": "rimraf node_modules && rimraf apps/*/node_modules && rimraf libs/*/node_modules",
     "deps": "yarn install",
     "build:workspaces": "yarn workspaces run build",
@@ -19,6 +19,7 @@
     "apps/*"
   ],
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.31.0",
@@ -26,8 +27,10 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.26.0",
     "husky": "^8.0.3",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1"
+    "prettier": "^3.1.1",
+    "ts-jest": "^29.1.2"
   },
   "keywords": [],
   "author": "",
