--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,12 @@
     "parser": "@typescript-eslint/parser"
   },
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "@typescript-eslint/no-unused-vars": [
+      "warn",
+      { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }
+    ],
+    "@typescript-eslint/no-unused-expressions": "warn"
   },
   "env": {
     "node": true
