--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -18,8 +18,11 @@
   "description": "",
   "dependencies": {
     "@types/node": "^20.12.11",
+    "@ygo/mailer": "file:../../libs/mailer",
+    "@ygo/mongo-server": "file:../../libs/mongo-server",
+    "@ygo/schemas": "file:../../libs/schemas",
     "axios": "^1.6.8",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
@@ -42,10 +45,7 @@
     "request-promise": "^4.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "webp-converter": "^2.3.3",
-    "@ygo/schemas": "file:../../libs/schemas",
-    "@ygo/mongo-server": "file:../../libs/mongo-server",
-    "@ygo/mailer": "file:../../libs/mailer"
+    "webp-converter": "^2.3.3"
   },
   "engines": {
     "node": ">=14.0.0"
