--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -21,6 +21,8 @@
     "@ygo/mailer": "file:../../libs/mailer",
     "@ygo/mongo-server": "file:../../libs/mongo-server",
     "@ygo/schemas": "file:../../libs/schemas",
+    "@ygo/google-apis": "file:../../libs/google-apis",
+    "@ygo/line": "file:../../libs/line",
     "axios": "^1.6.8",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.12",
