--- a/libs/schemas/package.json
+++ b/libs/schemas/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "json-schema-to-ts": "^3.1.0",
+    "fs-extra": "^11.1.0",
+    "chokidar": "^3.5.3",
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
