--- a/libs/mongo-server/package.json
+++ b/libs/mongo-server/package.json
@@ -18,6 +18,8 @@
     "node": ">=14.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/dotenv": "^8.2.0",
     "@types/mongoose": "^5.11.97"
   }
