--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "apps/*"
   ],
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
