--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "private": true,
   "scripts": {
     "test": "jest",
-    "clean": "rimraf node_modules && rimraf apps/*/node_modules && rimraf libs/*/node_modules",
+    "clean": "rimraf **/node_modules **/dist",
     "deps": "yarn install",
     "build:workspaces": "yarn workspaces run build",
-    "setup": "yarn clean && yarn deps && yarn build:workspaces",
+    "setup": "run-s clean deps build:workspaces",
     "prepare": "node .husky/prepare-husky.js"
   },
   "workspaces": [
@@ -30,6 +30,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "ts-jest": "^29.1.2"
   },
