--- a/libs/line/package.json
+++ b/libs/line/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
+    "test": "jest",
     "clean": "rimraf ./dist",
     "build": "yarn clean && tsc"
   },
@@ -11,6 +12,8 @@
     "axios": "^1.6.8"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/axios": "^0.14.0"
   }
 }
