--- a/libs/mailer/package.json
+++ b/libs/mailer/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "clean": "rimraf ./dist",
     "build": "yarn clean && tsc"
   },
