--- a/libs/line/package.json
+++ b/libs/line/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "clean": "rimraf ./dist",
     "build": "yarn clean && tsc"
   },
