--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "clean": "rimraf **/node_modules **/dist",
     "deps": "yarn install",
     "build:workspaces": "yarn workspaces run build",
