--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest --coverage",
     "preclean": "bash ./preclean.sh",
-    "clean": "rimraf **/node_modules **/dist",
+    "clean": "rimraf **/node_modules",
     "deps": "yarn install",
     "build:workspaces": "yarn workspaces run build",
     "setup": "run-s clean deps build:workspaces",
