--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -23,18 +23,15 @@
     "@ygo/schemas": "file:../../libs/schemas",
     "@ygo/google-apis": "file:../../libs/google-apis",
     "@ygo/line": "file:../../libs/line",
+    "@ygo/crawler": "file:../../libs/crawler",
     "axios": "^1.6.8",
     "chalk": "^4.1.2",
-    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.2",
-    "iconv": "^3.0.1",
-    "iconv-lite": "^0.6.3",
     "image-to-base64": "^2.2.0",
     "inquirer": "^9.2.20",
-    "jquery": "^3.7.1",
     "mongoose": "^8.3.4",
     "nanospinner": "^1.1.0",
     "node-schedule": "^2.1.1",
@@ -49,12 +46,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/chalk": "^2.2.0",
-    "@types/cheerio": "^0.22.35",
     "@types/dotenv": "^8.2.0",
     "@types/figlet": "^1.5.8",
     "@types/gradient-string": "^1.1.6",
     "@types/inquirer": "^9.0.7",
-    "@types/jquery": "^3.5.30",
     "@types/mongoose": "^5.11.97",
     "@types/node-schedule": "^2.1.7"
   }
