關閉test 時 顯示log干擾 並將爬蟲引入日誌功能

--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -19,6 +19,7 @@
   "description": "",
   "dependencies": {
     "@types/node": "^20.12.11",
+    "@types/winston": "^2.4.4",
     "@ygo/crawler": "file:../../libs/crawler",
     "@ygo/google-apis": "file:../../libs/google-apis",
     "@ygo/line": "file:../../libs/line",
@@ -40,7 +41,8 @@
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "webp-converter": "^2.3.3"
+    "webp-converter": "^2.3.3",
+    "winston": "^3.13.0"
   },
   "engines": {
     "node": ">=14.0.0"
