add 判例 schema & mongo schema

--- a/libs/mongo-server/package.json
+++ b/libs/mongo-server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "clean": "rimraf ./dist",
+    "rebuild": "rimraf ./noed_modules && yarn install",
     "build": "yarn clean && tsc"
   },
   "dependencies": {
