--- a/libs/schemas/package.json
+++ b/libs/schemas/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "clean": "rimraf ./dist",
-    "gen:schema": "node ./src/generate.js",
+    "gen:schema": "node ./src/generate.js && prettier --write ./src/**/*.const.ts",
     "build": "yarn clean && yarn gen:schema && tsc"
   },
   "dependencies": {
