add bundle with libs 為判斷依賴進行安裝

--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf ./dist",
-    "build": "yarn clean && tsc"
+    "build": "yarn clean && tsc",
+    "rebuild": "rimraf ./node_modules && yarn install"
   },
   "dependencies": {
     "@ygo/schemas": "file:../../libs/schemas",
