add setup 後 刪除子專案 node_modules & 專案 build 時會更新依賴

--- a/libs/google-apis/package.json
+++ b/libs/google-apis/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "clean": "rimraf ./dist",
-    "build": "yarn clean && tsc"
+    "build": "yarn clean && tsc  --build --verbose"
   },
   "dependencies": {
     "@babel/preset-env": "^7.24.5",
