--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "scripts": {
     "test": "jest --coverage",
-    "preclean": "bash ./preclean.sh",
     "clean": "rimraf **/node_modules",
     "deps": "yarn install",
     "build:workspaces": "yarn workspaces run build",
     "setup": "run-s clean deps build:workspaces",
+    "postsetup": "rimraf ./apps/**/node_modules ./libs/**/node_modules",
     "prepare": "node .husky/prepare-husky.js"
   },
   "workspaces": [
