--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "clean": "rimraf ./dist",
-    "build": "yarn clean && tsc",
+    "build": "yarn clean && tsc  --build --verbose",
     "rebuild": "rimraf ./node_modules && yarn install"
   },
   "dependencies": {
