--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -7,7 +7,7 @@
     "test": "jest --coverage",
     "clean": "rimraf ./dist",
     "rebuild": "rimraf ./node_modules && yarn install",
-    "build": "yarn clean && tsc",
+    "build": "yarn clean && tsc  --build --verbose",
     "watch:ts": "tsc --watch",
     "start": "yarn build && node dist/index.js",
     "q:start": "ts-node src/index.ts",
