--- a/libs/line/package.json
+++ b/libs/line/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest --coverage",
     "clean": "rimraf ./dist",
-    "build": "yarn clean && tsc"
+    "build": "yarn clean && tsc  --build --verbose"
   },
   "dependencies": {
     "axios": "^1.6.8"
