--- a/libs/mongo-server/tsconfig.json
+++ b/libs/mongo-server/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "composite": true, // 啟用合成檔案
     "target": "ES2021", // 編譯到的目標 JavaScript 版本
     "module": "CommonJS", // 使用最新的模塊系統
     "strict": true, // 啟用嚴格模式
@@ -25,5 +26,10 @@
   "exclude": [
     "node_modules", // 排除的目錄
     "**/*.spec.ts"
+  ],
+  "references": [
+    {
+      "path": "../schemas"
+    }
   ]
 }
