--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --coverage",
-    "clean": "rimraf ./dist",
+    "clean": "rimraf ./dist tsconfig.tsbuildinfo",
     "rebuild": "rimraf ./node_modules && yarn install",
     "build": "yarn clean && tsc  --build --verbose",
     "watch:ts": "tsc --watch",
