--- a/libs/line/package.json
+++ b/libs/line/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "test": "jest --coverage",
-    "clean": "rimraf ./dist",
+    "clean": "rimraf ./dist tsconfig.tsbuildinfo",
     "build": "yarn clean && tsc  --build --verbose"
   },
   "dependencies": {
