--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "tsc-files": "^1.1.4"
+  }
 }
