--- a/libs/ruten-apis/package.json
+++ b/libs/ruten-apis/package.json
@@ -10,5 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.2"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1"
   }
 }
