libs ruten use mongodb & schemas

--- a/libs/ruten-apis/package.json
+++ b/libs/ruten-apis/package.json
@@ -9,6 +9,8 @@
     "build": "yarn clean && tsc  --build --verbose"
   },
   "dependencies": {
+    "@ygo/mongo-server": "file:../../libs/mongo-server",
+    "@ygo/schemas": "file:../../libs/schemas",
     "axios": "^1.7.2"
   },
   "devDependencies": {
