--- a/libs/ruten-apis/tsconfig.json
+++ b/libs/ruten-apis/tsconfig.json
@@ -29,6 +29,9 @@
   ],
   "references": [
     {
+      "path": "../../libs/mongo-server"
+    },
+    {
       "path": "../../libs/schemas"
     }
   ]
