--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,5 +84,5 @@
   "[typescriptreact]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "cSpell.words": ["Runten"]
+  "cSpell.words": ["HILIFE", "Runten"]
 }
