--- a/libs/ruten-apis/package.json
+++ b/libs/ruten-apis/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@ygo/mongo-server": "file:../../libs/mongo-server",
     "@ygo/schemas": "file:../../libs/schemas",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
