--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   build-and-deploy:
@@ -54,9 +51,14 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
           echo "REDIRECT_URI=${{ secrets.REDIRECT_URI }}" >> .env
           echo "REFRESH_TOKEN=${{ secrets.REFRESH_TOKEN }}" >> .env
+
+      - name: List directory contents
+        run: ls -la
+
       - name: Verify .env file creation
-        run: cat ./apps/yu-sei/.env
+        run: cat .env
+
       - name: Transfer files
         run: |
           rsync -avz --delete ./apps/yu-sei/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/
-          scp ./apps/yu-sei/.env root@${{ secrets.HOSTNAME }}:/root/cron_job/
+          scp .env root@${{ secrets.HOSTNAME }}:/root/cron_job/
