--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -57,5 +57,5 @@ jobs:
         run: |
           rsync -avz --delete ./apps/yu-sei/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/dist
           rsync -avz --delete ./apps/yu-sei/package.json root@${{ secrets.HOSTNAME }}:/root/cron_job/package.json
-          rsync -avz --delete ./node_modules root@${{ secrets.HOSTNAME }}:/root/cron_job/node_modules
+          rsync -avz --delete ./node_modules/ root@${{ secrets.HOSTNAME }}:/root/cron_job/node_modules
           scp .env root@${{ secrets.HOSTNAME }}:/root/cron_job/
