--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -21,19 +21,8 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
-      - name: Build the project
-        working-directory: ./apps/yu-sei
-        run: yarn build
-
-      - name: Build libs
-        run: |
-          yarn workspace @ygo/crawler build
-          yarn workspace @ygo/google-apis build
-          yarn workspace @ygo/line build
-          yarn workspace @ygo/mailer build
-          yarn workspace @ygo/mongo-server build
-          yarn workspace @ygo/schemas build
-          yarn workspace @ygo/ruten-apis build
+      - name: Build all projects
+        run: yarn workspaces run build
 
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.5.3
@@ -63,26 +52,14 @@ jobs:
         run: |
           ssh root@${{ secrets.HOSTNAME }} "find /root/cron_job -mindepth 1 ! -regex '^/root/cron_job/log\(/.*\)?' -delete"
 
-      - name: Create target directories
-        run: |
-          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/libs/crawler/dist"
-          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/libs/google-apis/dist"
-          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/libs/line/dist"
-          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/libs/mailer/dist"
-          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/libs/mongo-server/dist"
-          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/libs/schemas/dist"
-          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/libs/ruten-apis/dist"
-
       - name: Transfer files
         run: |
-          rsync -avz --delete ./apps/yu-sei/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/dist
-          rsync -avz --delete ./apps/yu-sei/package.json root@${{ secrets.HOSTNAME }}:/root/cron_job/package.json
-          rsync -avz --delete ./node_modules/ root@${{ secrets.HOSTNAME }}:/root/cron_job/node_modules
-          rsync -avz --delete ./libs/crawler/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs/crawler/dist
-          rsync -avz --delete ./libs/google-apis/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs/google-apis/dist
-          rsync -avz --delete ./libs/line/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs/line/dist
-          rsync -avz --delete ./libs/mailer/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs/mailer/dist
-          rsync -avz --delete ./libs/mongo-server/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs/mongo-server/dist
-          rsync -avz --delete ./libs/schemas/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs/schemas/dist
-          rsync -avz --delete ./libs/ruten-apis/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs/ruten-apis/dist
+          rsync -avz ./apps/yu-sei/dist/ root@${{ secrets.HOSTNAME }}:/root/cron_job/dist
+          rsync -avz ./apps/yu-sei/package.json root@${{ secrets.HOSTNAME }}:/root/cron_job/package.json
+          rsync -avz ./node_modules/ root@${{ secrets.HOSTNAME }}:/root/cron_job/node_modules
+          rsync -avz ./libs/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs
           scp .env root@${{ secrets.HOSTNAME }}:/root/cron_job/
+
+      - name: Install dependencies on server
+        run: |
+          ssh root@${{ secrets.HOSTNAME }} "cd /root/cron_job && yarn install"
