--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -54,9 +54,10 @@ jobs:
 
       - name: Transfer files
         run: |
+          ssh root@${{ secrets.HOSTNAME }} "mkdir -p /root/cron_job/apps/yu-sei"
           rsync -avz ./apps/yu-sei/ root@${{ secrets.HOSTNAME }}:/root/cron_job/apps/yu-sei
           rsync -avz ./libs/ root@${{ secrets.HOSTNAME }}:/root/cron_job/libs
           rsync -avz ./yarn.lock root@${{ secrets.HOSTNAME }}:/root/cron_job/yarn.lock
           rsync -avz ./package.json root@${{ secrets.HOSTNAME }}:/root/cron_job/package.json
           rsync -avz ./node_modules/ root@${{ secrets.HOSTNAME }}:/root/cron_job/node_modules
-          scp .env root@${{ secrets.HOSTNAME }}:/root/cron_job/app
+          scp .env root@${{ secrets.HOSTNAME }}:/root/cron_job/apps/yu-sei
