增加運行pm2 邏輯 並設定爬蟲時間

--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -61,3 +61,6 @@ jobs:
           rsync -avz ./package.json root@${{ secrets.HOSTNAME }}:/root/cron_job/package.json
           rsync -avz ./node_modules/ root@${{ secrets.HOSTNAME }}:/root/cron_job/node_modules
           scp .env root@${{ secrets.HOSTNAME }}:/root/cron_job/apps/yu-sei
+      - name: Restart PM2 process
+        run: |
+          ssh root@${{ secrets.HOSTNAME }} "pm2 restart card-time-reptile"
