--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'libs/**'
       - 'apps/yu-sei/**'
+      - '.github/workflows/yu-sei-pipeline.yml'
 
 jobs:
   build-and-deploy:
@@ -67,3 +68,6 @@ jobs:
       - name: Restart PM2 process
         run: |
           ssh root@${{ secrets.HOSTNAME }} "pm2 restart card-time-reptile"
+      - name: Clean up unnecessary files
+        run: |
+          ssh root@${{ secrets.HOSTNAME }} "rm -rf /root/cron_job/apps/*/src /root/cron_job/libs/*/src"
