當yml被修改時也需要執行CICD

--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -7,6 +7,7 @@ on:
     paths:
       - 'libs/**'
       - 'apps/yu-sei/**'
+      - '.github/workflows/yu-sei-pipeline.yml'
 
 jobs:
   build-and-deploy:
