修改異動名單

--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'libs/**'
       - 'apps/yu-sei/**'
-      - '.github/workflows/yu-sei-pipeline.yml'
+      - '.github/workflows/yu-sei.yml'
 
 jobs:
   build-and-deploy:
