add pm2 config yml

--- a/.github/workflows/yu-sei.yml
+++ b/.github/workflows/yu-sei.yml
@@ -68,7 +68,7 @@ jobs:
           scp .env root@${{ secrets.HOSTNAME }}:/root/cron_job/apps/yu-sei
       - name: Restart PM2 process
         run: |
-          ssh root@${{ secrets.HOSTNAME }} "cd cron_job && pm2 startOrRestart ./pm2/yu-sei.config.yml"
+          ssh root@${{ secrets.HOSTNAME }} "cd /root/cron_job && pm2 startOrRestart ./pm2/yu-sei.config.yml"
       - name: Clean up unnecessary files
         run: |
           ssh root@${{ secrets.HOSTNAME }} "rm -rf /root/cron_job/apps/*/src /root/cron_job/libs/*/src"
