--- a/apps/kai-ba/tsconfig.json
+++ b/apps/kai-ba/tsconfig.json
@@ -1,5 +1,7 @@
 {
+  "extends": "fastify-tsconfig",
   "compilerOptions": {
+    "composite": true, // 啟用合成檔案
     "target": "ES2021", // 編譯到的目標 JavaScript 版本
     "module": "CommonJS", // 使用最新的模塊系統
     "strict": true, // 啟用嚴格模式
@@ -25,5 +27,28 @@
   "exclude": [
     "node_modules", // 排除的目錄
     "**/*.spec.ts"
+  ],
+  "references": [
+    {
+      "path": "../../libs/crawler"
+    },
+    {
+      "path": "../../libs/google-apis"
+    },
+    {
+      "path": "../../libs/line"
+    },
+    {
+      "path": "../../libs/mailer"
+    },
+    {
+      "path": "../../libs/mongo-server"
+    },
+    {
+      "path": "../../libs/schemas"
+    },
+    {
+      "path": "../../libs/ruten-apis"
+    }
   ]
 }
