--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -1,17 +1,42 @@
 {
   "name": "kai-ba",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "clean": "rimraf ./dist tsconfig.tsbuildinfo",
-    "build": "yarn clean && tsc  --build --verbose",
-    "rebuild": "rimraf ./node_modules && yarn install"
+  "description": "This project was bootstrapped with Fastify-CLI.",
+  "main": "app.ts",
+  "directories": {
+    "test": "test"
   },
+  "scripts": {
+    "test": "jest --coverage",
+    "clean": "rimraf ./dist tsconfig.tsbuildinfo",
+    "rebuild": "rimraf ./node_modules && yarn install",
+    "build": "yarn clean && tsc  --build --verbose",
+    "start": "yarn build && fastify start -l info dist/app.js",
+    "watch:ts": "tsc --watch",
+    "dev": "yarn build && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"yarn watch:ts\" \"yarn dev:start\"",
+    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@ygo/schemas": "file:../../libs/schemas",
-    "@ygo/mongo-server": "file:../../libs/mongo-server",
-    "@ygo/mailer": "file:../../libs/mailer",
-    "fastify": "^4.27.0"
+    "@fastify/autoload": "^5.0.0",
+    "@fastify/compress": "^7.0.3",
+    "@fastify/sensible": "^5.0.0",
+    "@fastify/static": "^7.0.4",
+    "@types/uuid": "^10.0.0",
+    "close-with-grace": "^1.3.0",
+    "fastify": "^4.26.1",
+    "fastify-cli": "^6.2.1",
+    "fastify-plugin": "^4.0.0",
+    "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.4.4",
+    "c8": "^9.0.0",
+    "concurrently": "^8.2.2",
+    "fastify-tsconfig": "^2.0.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^5.2.2"
   }
 }
