--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/auth": "^4.6.1",
     "@fastify/autoload": "^5.0.0",
     "@fastify/compress": "^7.0.3",
     "@fastify/sensible": "^5.0.0",
