--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -23,6 +23,7 @@
     "@fastify/auth": "^4.6.1",
     "@fastify/autoload": "^5.0.0",
     "@fastify/compress": "^7.0.3",
+    "@fastify/cookie": "^9.3.1",
     "@fastify/sensible": "^5.0.0",
     "@fastify/static": "^7.0.4",
     "@types/uuid": "^10.0.0",
