--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -24,6 +24,7 @@
     "@fastify/autoload": "^5.0.0",
     "@fastify/compress": "^7.0.3",
     "@fastify/cookie": "^9.3.1",
+    "@fastify/secure-session": "^7.5.1",
     "@fastify/sensible": "^5.0.0",
     "@fastify/static": "^7.0.4",
     "@types/uuid": "^10.0.0",
