--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -24,11 +24,14 @@
     "@fastify/autoload": "^5.0.0",
     "@fastify/compress": "^7.0.3",
     "@fastify/cookie": "^9.3.1",
+    "@fastify/cors": "^9.0.1",
     "@fastify/rate-limit": "^9.1.0",
     "@fastify/redis": "^6.2.0",
     "@fastify/secure-session": "^7.5.1",
     "@fastify/sensible": "^5.0.0",
     "@fastify/static": "^7.0.4",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.0.1",
     "@types/uuid": "^10.0.0",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
