--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -35,6 +35,7 @@
     "@types/uuid": "^10.0.0",
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
+    "awilix": "^11.0.0",
     "close-with-grace": "^1.3.0",
     "fastify": "^4.26.1",
     "fastify-cli": "^6.2.1",
