--- a/apps/kai-ba/package.json
+++ b/apps/kai-ba/package.json
@@ -40,6 +40,7 @@
     "fastify": "^4.26.1",
     "fastify-cli": "^6.2.1",
     "fastify-plugin": "^4.0.0",
+    "node-cache": "^5.1.2",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
