--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -13,7 +13,8 @@
     "q:start": "ts-node src/index.ts",
     "d:start": "node dist/index.js",
     "s:start": "yarn build && pm2 start --name yu-sei dist/index.js",
-    "tss": "tsc --noEmit"
+    "tss": "tsc --noEmit",
+    "job:ntucgm": "ts-node src/jobs/reptileCardInfoFromNTUCGM.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +29,7 @@
     "figlet": "^1.7.0",
     "gradient-string": "^2.0.2",
     "image-to-base64": "^2.2.0",
-    "inquirer": "^9.2.20",
+    "inquirer": "^11.1.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.3.4",
     "nanospinner": "^1.1.0",
