--- a/apps/yu-sei/package.json
+++ b/apps/yu-sei/package.json
@@ -14,7 +14,8 @@
     "d:start": "node dist/index.js",
     "s:start": "yarn build && pm2 start --name yu-sei dist/index.js",
     "tss": "tsc --noEmit",
-    "job:ntucgm": "ts-node src/jobs/reptileCardInfoFromNTUCGM.ts"
+    "job:ntucgm": "ts-node src/jobs/reptileCardInfoFromNTUCGM.ts",
+    "script:docToDB": "ts-node src/scripts/pushJSONFileToDB.ts"
   },
   "keywords": [],
   "author": "",
